# evalforge

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CONTRIBUTING.md  ENTRYPOINTS.md  IMPLEMENTATION_PLAN.md  IMPROVEMENT_PLAN.md  Makefile  README.md  ROADMAP.md  SETUP.md  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml
data/sample/: mock_responses.json
docs/: ARCHITECTURE.md  CI_INTEGRATION.md  METRICS.md  SECURITY.md  TEST_TYPES.md
docs/architecture/: c4.md
evalforge/: __init__.py  cli.py  config.py  drift.py  execution.py  logging.py  plugins.py
evalforge/backends/: __init__.py  anthropic.py  base.py  cache.py  huggingface.py  litellm.py  mock.py  openai_compatible.py
evalforge/ci/: github_action.py
evalforge/compliance/: __init__.py  engine.py  judge.py
evalforge/datasets/: huggingface_loader.py
evalforge/judges/: __init__.py  base.py  citation_check.py  exact_match.py  forbidden_content.py  llm_judge.py  refusal_check.py  registry.py  retrieval_check.py  semantic_match.py  structured_output.py
evalforge/loader/: __init__.py  schema.py  suite_loader.py
evalforge/models/: __init__.py  report.py  test_case.py  test_result.py
evalforge/notifications/: __init__.py  discord.py  slack.py
evalforge/reporters/: __init__.py  base.py  html.py  json_report.py  junit.py  markdown.py  sarif.py  terminal.py
evalforge/runners/: __init__.py  agent_runner.py  base.py  rag_runner.py
evalforge/scheduler/: __init__.py  cron.py
evalforge/server/: __init__.py  app.py
evalforge/storage/: __init__.py  history.py
evalforge/workspaces/: __init__.py  manager.py
example_suites/: agent_tools.yaml  compliance.yaml  rag_basic.yaml  rag_citation.yaml  structured_output.yaml
frontend/: package-lock.json  package.json  playwright.config.ts
frontend/e2e/: dashboard.spec.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/compare/: page.tsx
frontend/src/components/: Card.tsx  ComplianceList.tsx  Nav.tsx  RunTable.tsx  ScoreBar.tsx
rule_packs/: ai_ethics.yaml
scripts/: benchmark.py
src/: report_generator.py
tests/: __init__.py  conftest.py  test_backends.py  test_cache.py  test_ci.py  test_cli.py  test_compliance.py  test_config.py  test_drift.py  test_hf_loader.py  test_judges.py  test_llm_judge.py  test_loader.py  test_logging.py  test_notifications.py  test_plugins.py  test_reporters.py  test_runners.py  test_scheduler.py  test_server.py  test_storage.py  test_structured_output.py  test_workspaces.py
