[build-system]
requires = ["hatchling"]
build-backend = "hatchling.backends"

[project]
name = "evalforge"
version = "0.1.0"
description = "A practical regression-testing harness for RAG and agentic AI systems"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "EvalForge Contributors" }]
keywords = ["evaluation", "rag", "ai", "testing", "regression"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "typer>=0.26.4",
    "pyyaml>=6.0.3",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "httpx>=0.28.1",
    "rich>=15.0.0",
    "tenacity>=9.1.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.15",
    "mypy>=2.1.0",
]

[project.scripts]
evalforge = "evalforge.cli:app"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
