[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "evalforge"
version = "0.1.0"
description = "A practical regression-testing harness for RAG and agentic AI systems"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "EvalForge Contributors" }]
keywords = ["evaluation", "rag", "ai", "testing", "regression"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "typer>=0.26.7",
    "pyyaml>=6.0.3",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "httpx>=0.28.1",
    "rich>=15.0.0",
    "tenacity>=9.1.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.16",
    "mypy>=2.1.0",
]
llm = [
    "openai>=2.41.0",
    "anthropic>=0.107.0",
]
hf = [
    "datasets>=5.0.0",
    "transformers>=5.10.2",
    "torch>=2.12.0",
]
server = [
    "fastapi>=0.136.3",
    "uvicorn>=0.49.0",
]
all = [
    "evalforge[dev,llm,hf,server]",
]

[project.scripts]
evalforge = "evalforge.cli:app"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["UP042", "E501", "N816"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true

[[tool.mypy.overrides]]
module = [
    "yaml",
    "datasets",
    "apscheduler.*",
    "anthropic",
]
ignore_missing_imports = true

